# EspTinyUSB

./: CMakeLists.txt
src/: diskio_rawmsc.hpp  usb_msc.hpp
src/host/common/: usb_host.cpp
src/host/msc/: usb_msc.cpp
src/host/msc/vfs/: diskio_rawmsc.cpp
